--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,2 +1,4 @@
 $txt-m: 'Montserrat', sans-serif;
 $txt-a: 'Acrom', sans-serif;
+$txt-a: 'Roboto', sans-serif;
+$txt-a: 'Kaushan-script', sans-serif;
